Move examples to folder

--- a/examples/auto-define.html
+++ b/examples/auto-define.html
@@ -4,11 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="dark light">
-    <script type="module">
-			import { LogFormElement } from "https://esm.sh/jsr/@knowler/log-form-element?raw";
-
-      LogFormElement.define();
-    </script>
+		<title>Auto define example — <log-form> element</title>
+    <script type="module" src="https://esm.sh/jsr/@knowler/log-form-element?raw&define"></script>
   </head>
   <body>
 		<h1><code>&lt;log-form&gt;</code> element demonstration</h1>
