--- a/examples/basic.html
+++ b/examples/basic.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="dark light">
-    <script type="module" src="https://esm.sh/jsr/@knowler/log-form-element?raw&define"></script>
+		<title>Basic example — <log-form> element</title>
+    <script type="module">
+			import { LogFormElement } from "https://esm.sh/jsr/@knowler/log-form-element?raw";
+
+      LogFormElement.define();
+    </script>
   </head>
   <body>
 		<h1><code>&lt;log-form&gt;</code> element demonstration</h1>
